fix text field variant square text align

--- a/src/components/base/TextField/TextField.scss
+++ b/src/components/base/TextField/TextField.scss
@@ -53,6 +53,8 @@
       border: spacing(0.6) solid color('gray');
       font-size: $font-4;
       padding: spacing(5) spacing(6);
+      padding-top: calc(#{spacing(5)} + 0.1875rem);
+      padding-bottom: calc(#{spacing(5)} - 0.1875rem);
       text-align: center;
 
       &::placeholder {
